<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEF6E7"
    tools:context=".KItchenActivity"
    android:orientation="vertical"
    android:layout_gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="50sp"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/ActionT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kitchenMessage"
        android:layout_marginTop="15dp"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/SendOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:text="@string/btnordertoKitchen" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintMessage" />
    </com.google.android.material.textfield.TextInputLayout>


</LinearLayout>