<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:layout_gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="50sp"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/RegHours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_gravity="center"
        android:paddingTop="15dp"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/buttonCheckhours"
        android:layout_width="wrap_content"
        android:background="#F15353"
        android:layout_height="wrap_content"
        android:text="@string/btnckHours"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:onClick="onclickhourCheck"/>

    <TextView
        android:id="@+id/RegiPed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20sp"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/ButtonFoodReq"
        android:layout_width="wrap_content"
        android:background="#F15353"
        android:layout_height="wrap_content"
        android:text="@string/btnfoodreq"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:onClick="OnClickOrder"/>

    <Button
        android:id="@+id/ButtonCallKitchen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:background="#F8E8AE"
        android:text="@string/btnCallKit"
        android:onClick="OnClickKitchen"/>


</LinearLayout>

